--- a/public/frontend/signin.html
+++ b/public/frontend/signin.html
@@ -20,9 +20,14 @@
     @scroll.window="stickyMenu = (window.pageYOffset > 20) ? true : false">
     <div class="bb ze ki xn 2xl:ud-px-0 oo wf yf i">
       <div class="vd to/4 tc wf yf">
-        <a href="index.html">
-          <img class="om" src="images/logo-light.svg" alt="Logo Light" />
-          <img class="xc nm" src="images/logo-dark.svg" alt="Logo Dark" />
+        <a href="index.html" class="site-brand">
+          <img class="om" src="images/logo-custom.svg" alt="Logo" />
+          <img class="xc nm" src="images/logo-custom.svg" alt="Logo" />
+          <span class="site-brand-text">
+            <span>kita</span>
+            <span>membantu</span>
+            <span>sesama</span>
+          </span>
         </a>
 
         <!-- Hamburger Toggle BTN -->
@@ -111,8 +116,8 @@
         <div class="tc uf ap gg fp">
           <div class="animate_top zd/2 to/4">
             <a href="index.html">
-              <img src="images/logo-light.svg" alt="Logo" class="om" />
-              <img src="images/logo-dark.svg" alt="Logo" class="xc nm" />
+              <img src="images/logo-custom.svg" alt="Logo" class="om" />
+              <img src="images/logo-custom.svg" alt="Logo" class="xc nm" />
             </a>
 
             <p class="lc fb">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
