--- a/public/frontend/blog-grid.html
+++ b/public/frontend/blog-grid.html
@@ -21,8 +21,16 @@
     <div class="bb ze ki xn 2xl:ud-px-0 oo wf yf i">
       <div class="vd to/4 tc wf yf">
         <a href="index.html">
-          <img class="om" src="images/logo-light.svg" alt="Logo Light" />
-          <img class="xc nm" src="images/logo-dark.svg" alt="Logo Dark" />
+          <a href="#" class="site-brand">
+            <img class="om" src="images/logo-custom.svg" alt="Logo" />
+            <img class="xc nm" src="images/logo-custom.svg" alt="Logo" />
+            <span class="site-brand-text">
+              <span>kita</span>
+              <span>membantu</span>
+              <span>sesama</span>
+            </span>
+          </a>
+          <img class="xc nm" src="images/logo-custom.svg" alt="Logo" />
         </a>
 
         <!-- Hamburger Toggle BTN -->
@@ -355,17 +363,23 @@
         <div class="tc uf ap gg fp">
           <div class="animate_top zd/2 to/4">
             <a href="index.html">
-              <img src="images/logo-light.svg" alt="Logo" class="om" />
-              <img src="images/logo-dark.svg" alt="Logo" class="xc nm" />
+              <img src="images/logo-custom.svg" alt="Logo" class="om" />
+              <img src="images/logo-custom.svg" alt="Logo" class="xc nm" />
             </a>
 
             <p class="lc fb">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
             <ul class="tc wf cg">
               <li>
-                <a href="#!">
-                  <svg class="vh ul cl il" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <a href="#" class="site-brand">
+                  <img class="om" src="images/logo-custom.svg" alt="Logo" />
+                  <img class="xc nm" src="images/logo-custom.svg" alt="Logo" />
+                  <span class="site-brand-text">
+                    <span>kita</span>
+                    <span>membantu</span>
+                    <span>sesama</span>
+                  </span>
+                </a>
                     <g clip-path="url(#clip0_48_1499)">
                       <path
                         d="M14 13.5H16.5L17.5 9.5H14V7.5C14 6.47 14 5.5 16 5.5H17.5V2.14C17.174 2.097 15.943 2 14.643 2C11.928 2 10 3.657 10 6.7V9.5H7V13.5H10V22H14V13.5Z"
