--- a/public/frontend/404.html
+++ b/public/frontend/404.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>404 | Kita Membantu Sesama</title>
-  <link rel="icon" href="favicon.ico">
+  <!-- Prefer scalable SVG favicon, fallback to legacy ICO -->
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="alternate icon" href="/frontend/favicon.ico">
   <link href="style.css" rel="stylesheet">
 </head>
 
